# Automated-DomainModel-Benchmark

./: .gitignore  .zenodo.json  BENCHMARK_REPORT.md  CHANGELOG.md  CITATION.cff  README.md  SESSION_SUMMARY.md  codemeta.json  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Candidates/: README.md  adjustments.md  candidate_interface.py  registry.py
Candidates/AutomatedDomainModelling-zenodo/: README.md  _examples_btms.py  config.json  zenodo_text_format.py
Candidates/AutomatedDomainModelling_zenodo/: README.md  __init__.py  _messages.py  config.json  plantuml_validator.py  run-candidate.py  zenodo_text_format.py
Candidates/AutomatedDomainModelling_zenodo/cot/: run.py  (+6 more)
Candidates/ai4se_benchmarkPaper/: README.md  config.json
Candidates/dummy_candidate/: README.md  candidate.py  run.py
Candidates/ollama/: README.md  config.json  harness.py
Candidates/opencode/: README.md  config.json  harness.py
Candidates/rule_based/: README.md  candidate.py  heuristic.py  metric.json  run.py
Candidates/text2uml-kaiser/: README.md  config.json  run-candidate.py
Data/: README.md  __init__.py  build_datasets.py  clean_datasets.py  kaiser.json  kaiser_clean.json  reference.json  reference_clean.json
Data/NLP-Analysis/: FINDINGS.md  INSIGHTS.md  Makefile  README.md  analyze.py  build_examples.py  build_summary_json.py  cross_ref.py  dep_match.py  extract_diagram.py  lex_match.py  nlp_features.py  report.py  requirements.txt
Data/Parser/: __init__.py  qualitative_test.py  test_runner.py
Data/data-source-3/: README.md  data_source_3_clean.json
Metric/: README.md  __init__.py  wrapper.py
Workflow/: README.md  config_loader.py  generate.py  metric_runner.py  orchestrator.py  run_all.py  run_benchmark.py  run_full.py  score.py  visualise.py
Workflow/Benchmark-Workflow/: README.md  collect.py  config.json  config_loader.py  generate.py  score.py  visualise.py
Workflow/Notebooks/: walkthrough.ipynb
Workflow/Results/: _bucket_kaiser_association_score.csv  _bucket_kaiser_attribute_score.csv  _bucket_kaiser_class_score.csv  _bucket_reference_association_score.csv  _bucket_reference_attribute_score.csv  _bucket_reference_class_score.csv  _errors.csv  _summary.csv  _summary.json
scripts/: run_metric_runner.py  run_orchestrator.py
tests/: conftest.py  test_candidate_interface.py  test_data_clean.py  test_data_smoke.py  test_kaiser_prompts.py  test_metric_resolution.py  test_metric_wrapper.py  test_ollama_harness.py  test_ollama_inlined.py  test_opencode_harness.py  test_registry.py  test_rule_based.py  test_rule_based_candidate.py  test_workflow_end_to_end.py  test_workflow_generate.py  test_workflow_score.py  test_workflow_visualise.py  test_zenodo_prompts.py
(+305 files in other folders)
